feat: add entity data and include fluid in block states